# Rust-Code-Visualizer

./: .gitignore  HowToUseCallStack.md  README.md
VSCodeUI/rust-code-visualizer/: .gitignore  .profile_data.txt  CHANGELOG.md  README.md  addingafile  package-lock.json  package.json  profiler_graphs.json  profiling_data.json  tsconfig.json
VSCodeUI/rust-code-visualizer/.rcv/: cyto.json
VSCodeUI/rust-code-visualizer/data/: cyto.json  profiler_graphs.json  profiling_data.json
VSCodeUI/rust-code-visualizer/ext-src/: extension.ts  main.py  panel.ts  sidebar.ts  utilities.ts
VSCodeUI/rust-code-visualizer/media/: asset-manifest.json  main.5e90d8e1.css  main.5e90d8e1.css.map  output.css
VSCodeUI/rust-code-visualizer/public/: index.html
VSCodeUI/rust-code-visualizer/src/: App.js  extension.ts  input.css  panel.ts  sidebar.ts
cargo-call-stack/: .gitignore  HowToUse.md
cargo-call-stack/example/: Cargo.toml  addingafile.rs  anotherFile.rs  cg.dot  example.rs
cargo-call-stack/example/.rcv/: addingafile.rs.bk
cargo-call-stack/examples/example/: example.rs
cargo-call-stack/examples/microcontroller/: microcontroller.rs
cargo-callgraph/: README.md
cargo-callgraph-rebuild/: Cargo.toml  README.md  setup_build.bash
cargo-callgraph-rebuild/src/librustdoc/: config.rs  core.rs  extract_dependencies.rs  lib.rs
cargo-callgraph-rebuild/src/librustdoc/clean/: types.rs
cargo-callgraph/src/librustdoc/: config.rs  core.rs  docfs.rs  doctest.rs  doctree.rs  error.rs  externalfiles.rs  extract_dependencies.rs  fold.rs  (+5 more)
converter/: converter.py
converter/data/: cg.json
converter/dot_source/: filtered.dot
examples/array_accessing/: Cargo.toml  array_accessing.rs
examples/bfs/: Cargo.toml  bfs.rs
examples/cycle/: Cargo.toml  cycle.rs
examples/example/: Cargo.toml  cg.dot
examples/for_loop/: Cargo.toml  for_loop.rs
examples/implmentation_traits/: Cargo.toml  implementation_traits.rs
examples/macros/: Cargo.toml  macros.rs
examples/microcontroller/: Cargo.toml  cg.dot  microcontroller.rs
examples/modules/: Cargo.toml  modules.rs
examples/recursion/: Cargo.toml  recursion.rs
examples/while_loop/: Cargo.toml  while_loop.rs
extension_scripts/: README.md  call-graph.py  code-visualizer.py  profiler.py
(+73 files in other folders)
