[package]
name = "cargo-callgraph-rebuild"
version = "0.0.0"
edition = "2021"

[[bin]]
path = "src/librustdoc/lib.rs"
name = "cargo-callgraph-rebuild"

[dependencies]
arrayvec = { version = "0.7", default-features = false }
askama = { version = "0.11", default-features = false, features = ["config"] }
atty = "0.2"
itertools = "0.10.1"
minifier = "0.2.2"
once_cell = "1.10.0"
pulldown-cmark = { version = "0.9.2", default-features = false }
regex = "1"
rustdoc-json-types = { path = "src/rustdoc-json-types" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.8.1"
tempfile = "3"
thin-vec = "0.2.8"
tracing = "0.1"
tracing-tree = "0.2.0"
bit-vec = "0.6.2"
dot = "0.1.4"
html-escape = "0.2.6"

[dependencies.tracing-subscriber]
version = "0.3.3"
default-features = false
features = ["fmt", "env-filter", "smallvec", "parking_lot", "ansi"]

[target.'cfg(windows)'.dependencies]
rayon = "1.5.1"

[dev-dependencies]
expect-test = "1.0"

[features]
jemalloc = []

[package.metadata.rust-analyzer]
rustc_private = true
