[package]
name = "cycle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[profile.release]
# `lto = true` should also work
lto = 'fat'
opt-level = 'z'

[[bin]]
name = "cycle"
path = "cycle.rs"
